<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/regist_headbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar_bg" >

        <TextView
            style="@style/custom_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/quick_regist"
             />

        <ImageButton
            android:id="@+id/regist_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:onClick="getback"
            android:src="@drawable/btn_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/regist_headbar" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" >

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name" />

                <EditText
                    android:id="@+id/et_userID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:hint="@string/user_name_hint"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_pwd" />

                <EditText
                    
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:hint="@string/login_pwd_hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_pwd" />

                <EditText
                    android:id="@+id/et_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_pwd_hint"
                    android:padding="10dp" />
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_code"
                     />

                <EditText
                    android:id="@+id/et_inviteCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:hint="@string/invite_code_hint"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                     />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp" >

                <TextView
                    style="@style/custom_normal_textview"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                     />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit"
                    android:inputType="phone"
                    android:hint="@string/phone_hint"
                    android:padding="8dp" />
            </LinearLayout>

            <Button
                style="@style/custom_btn"
                android:id="@+id/bt_regist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="quickRegist"
                android:text="@string/regist" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>