<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/getPassword_headbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_bar_bg" >

        <TextView
            style="@style/custom_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/find_pwd"
             />

        <ImageButton
            android:id="@+id/getPassword_back"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:onClick="back"
            android:src="@drawable/btn_back" />
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_edit"
        android:hint="@string/input_user_name"
        android:singleLine="true" />

    <Button
        style="@style/custom_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="50dp"
        android:onClick="sendEmail"
        android:text="@string/send_email" />

</LinearLayout>